# scikit-fmm

./: .clang-tidy  .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.txt  DEV_NOTES.md  LICENSE.txt  MANIFEST.in  Makefile  PUBLICATIONS.md  README.md  README.txt  alg.py  alg3d.py  alg_3d_matrix.py  appveyor.yml  dev_notes.org  dev_notes.txt  grad_mag_test.py  init_test.py  jae.py  make.bat  meson.build  notes.org  pyproject.toml  setup.py  skt.py  static_analysis.sh
.github/workflows/: build.yaml  wheels.yaml  windows_arm_build.yaml  windows_build.yaml
appveyor/: install.ps1  install_numpy.ps1
doc/: conf.py  examples.rst  index.rst  testing.rst
examples/: 2d_example.py  boundaryconditions_example.py  extension_velocities_example.py  matplotlib-tibor-onedriver-test.py  matplotlib-travel-time-test.py  pbc_test.py  unit_tests.py
init_temp/: Finite difference.ipynb  alg.py  alg3d.py  cross_derivative_test.py  grad_mag_test.py  notes.org  skt.py
profile/: .gitignore  prof.cpp  prof.sh  profile.py
skfmm/: TODO  __init__.py  __init__.pyi  base_marcher.cpp  base_marcher.h  bi_cubic_init.py  cfmm.cp36-win_amd64.pyd  distance_marcher.cpp  distance_marcher.h  distance_marcher_dinit.cpp  distance_marcher_dinit.h  extension_marcher.h  extension_velocity_marcher.cpp  extension_velocity_marcher.h  fast_marching.cpp  fast_marching.h  five.py  fmm.cpp  heap.cpp  heap.h  heap.py  no_malloc_heap.cpp  no_malloc_heap.h  pfmm.py  pheap.cp36-win_amd64.pyd  pheap.cpp  pheap.pyx  sDistanceMarcher.cpp  sDistanceMarcher.h  setup.py  travel_time_marcher.cpp  travel_time_marcher.h  travel_time_marcher_genes.cpp  travel_time_marcher_genes.h  tri_cubic_init.py  tricubic_interpolation.py
skfmm/.ipynb_checkpoints/: distance_marcher-checkpoint.h
skfmm/utility/: __init__.py  fmm_utility.py
test/: results_1769770123.txt
tests/: fipy_comparison.py  test_bi_cubic_init.py  test_bugs.py  test_doctests.py  test_dw.py  test_extension_velocities.py  test_fmm.py  test_oo_interface.py  test_utilities.py
