[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'wheel', 'oldest-supported-numpy']

[project]
name = 'scikit-fmm'
version = '2024.03.18'
description = 'An extension module implementing the fast marching method'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Jason Furtney', email = 'jkfurtney@gmail.com'},
]
url              = 'https://github.com/scikit-fmm/scikit-fmm'
keywords         = ['fast marching method', 'Eikonal equation', 'interface', 'boundary']
